can-socket/tests/compile-fail/standard_id_negative.rs
fn main() {
	let _id = can_socket::standard_id!(-2);
}
